--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "html-entities": "^1.2.1",
     "irc": "^0.5.2",
     "isomorphic-fetch": "^2.2.1",
-    "lodash": "^4.17.5"
+    "lodash": "^4.17.5",
+    "sqlite3": "^3.1.13"
   }
 }
