--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "irc": "^0.5.2",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.5",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "sqlite3": "^3.1.13",
         "webpack-dev-middleware": "^3.0.1",
         "ws": "^5.0.0"
