--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
+        "@blueprintjs/core": "^2.0.0-rc.2",
         "babel-core": "^6.26.0",
         "express": "^4.16.2",
         "html-entities": "^1.2.1",
@@ -12,6 +13,7 @@
         "lodash": "^4.17.5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-transition-group": "^2.2.1",
         "sqlite3": "^3.1.13",
         "webpack-dev-middleware": "^3.0.1",
         "ws": "^5.0.0"
@@ -21,7 +23,6 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
-        "webpack": "^4.1.1",
-        "webpack-cli": "^2.0.11"
+        "webpack": "^4.1.1"
     }
 }
