--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-transition-group": "^2.2.1",
         "sqlite3": "^3.1.13",
         "webpack-dev-middleware": "^3.0.1",
-        "ws": "^5.0.0"
+        "ws": "^5.0.0",
+        "zipson": "^0.2.7"
     },
     "devDependencies": {
         "babel-loader": "^7.1.4",
