--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@blueprintjs/core": "^2.0.0-rc.2",
         "babel-core": "^6.26.0",
+        "d3-dispatch": "^1.0.3",
         "express": "^4.16.2",
         "html-entities": "^1.2.1",
         "irc": "^0.5.2",
