--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
-        "@blueprintjs/core": "^2.0.0-rc.2",
         "babel-core": "^6.26.0",
+        "brace": "^0.11.1",
         "d3-dispatch": "^1.0.3",
         "express": "^4.16.2",
         "html-entities": "^1.2.1",
