--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
     "scripts": {
-        "start": "webpack --mode production && node index.js",
+        "start": "node index.js",
         "dev": "node index.js --dev"
     },
     "dependencies": {
-        "babel-core": "^6.26.0",
         "brace": "^0.11.1",
         "d3-dispatch": "^1.0.3",
         "express": "^4.16.2",
         "html-entities": "^1.2.1",
+        "import-glob-loader": "^1.1.0",
         "irc": "^0.5.2",
         "isomorphic-fetch": "^2.2.1",
         "lodash": "^4.17.5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "react-transition-group": "^2.2.1",
+        "react-router-dom": "^4.2.2",
         "sqlite3": "^3.1.13",
-        "webpack-dev-middleware": "^3.0.1",
         "ws": "^5.0.0",
         "zipson": "^0.2.7"
     },
     "devDependencies": {
+        "babel-core": "^6.26.0",
         "babel-loader": "^7.1.4",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
+        "node-sass": "^4.7.2",
+        "raw-loader": "^0.5.1",
+        "sass-loader": "^6.0.7",
+        "style-loader": "^0.20.3",
+        "webpack-dev-middleware": "^3.0.1",
         "webpack": "^4.1.1"
     }
 }
