--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "import-glob-loader": "^1.1.0",
         "irc": "^0.5.2",
         "isomorphic-fetch": "^2.2.1",
+        "jsdom": "^11.6.2",
         "lodash": "^4.17.5",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
@@ -29,7 +30,7 @@
         "raw-loader": "^0.5.1",
         "sass-loader": "^6.0.7",
         "style-loader": "^0.20.3",
-        "webpack-dev-middleware": "^3.0.1",
-        "webpack": "^4.1.1"
+        "webpack": "^4.1.1",
+        "webpack-dev-middleware": "^3.0.1"
     }
 }
