--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "brace": "^0.11.1",
         "d3-dispatch": "^1.0.3",
+        "date-fns": "^1.29.0",
         "express": "^4.16.2",
         "html-entities": "^1.2.1",
         "import-glob-loader": "^1.1.0",
