--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
+        "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "brace": "^0.11.1",
         "d3-dispatch": "^1.0.3",
         "date-fns": "^1.29.0",
@@ -14,6 +15,8 @@
         "isomorphic-fetch": "^2.2.1",
         "jsdom": "^11.6.2",
         "lodash": "^4.17.5",
+        "mobx": "^4.1.0",
+        "mobx-react": "^5.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-router-dom": "^4.2.2",
