--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
+        "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
         "date-fns": "^1.29.0",
         "express": "^4.16.2",
@@ -17,7 +18,6 @@
         "mobx-react": "^5.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "sqlite3": "^3.1.13",
         "vm2": "^3.5.2",
         "ws": "^5.0.0",
         "zipson": "^0.2.7"
