--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "mobx-react": "^5.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "uglify-es": "3.3.9",
+        "uglifyjs-webpack-plugin": "1.1.8",
         "vm2": "^3.5.2",
         "ws": "^5.0.0",
         "zipson": "^0.2.7"
@@ -28,12 +30,14 @@
         "babel-plugin-transform-class-properties": "^6.24.1",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-react-jsx": "^6.24.1",
+        "babel-preset-es2015": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "node-sass": "^4.7.2",
         "raw-loader": "^0.5.1",
         "sass-loader": "^6.0.7",
         "style-loader": "^0.20.3",
         "webpack": "^4.4.1",
+        "webpack-cli": "^2.0.13",
         "webpack-dev-middleware": "^3.0.1"
     }
 }
