--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
         {
             "address": "irc.furnet.org",
             "channels": ["#purplejr"],
-            "nickname": "purpleqt",
+            "nickname": "nibblr",
             "password": "milkshake"
         },
         {
