parse imports idea

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "lodash": "^4.17.5",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
+        "poker-calc": "^0.1.9",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "vm2": "^3.5.2",
