--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "scripts": {
+        "start-pm2": "pm2 start --name \"nibblr\" index.js",
         "start": "node index.js",
         "dev": "node index.js --dev"
     },
