--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "mobx-react": "^5.0.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "semver": "^5.5.1",
         "vm2": "^3.5.2",
         "ws": "^5.0.0",
         "zipson": "^0.2.7"
