--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "html-entities": "^1.2.1",
         "import-glob-loader": "^1.1.0",
         "irc": "^0.5.2",
-        "isomorphic-fetch": "^2.2.1",
         "jsdom": "12.1.0",
         "lodash": "^4.17.5",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
+        "node-fetch": "^2.2.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "semver": "^5.5.1",
