--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
+        "abortcontroller-polyfill": "^1.1.9",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
         "date-fns": "^1.29.0",
