added shell exec and exit

--- a/config.json.example
+++ b/config.json.example
@@ -9,6 +9,7 @@
         {
             "address": "irc.rizon.net",
             "channels": ["#nibblr", "#livingroom"],
+            "admins": ["Kirjava"],
             "nickname": "nibblrjr"
         },
         {
