--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
+        "@babel/parser": "^7.2.3",
+        "@babel/traverse": "^7.2.3",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
         "date-fns": "^1.29.0",
