--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "@babel/parser": "^7.2.3",
+        "@babel/standalone": "^7.2.5",
         "@babel/traverse": "^7.2.3",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
@@ -17,6 +18,7 @@
         "irc": "^0.5.2",
         "jsdom": "12.1.0",
         "lodash": "^4.17.5",
+        "loop-protect": "^2.1.6",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
         "node-fetch": "^2.2.0",
