--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "dev": "node index.js --dev"
     },
     "dependencies": {
-        "@babel/parser": "^7.2.3",
-        "@babel/traverse": "^7.2.3",
+        "@babel/core": "^7.2.2",
+        "@babel/standalone": "^7.3.1",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
         "date-fns": "^1.29.0",
@@ -17,6 +17,7 @@
         "irc": "^0.5.2",
         "jsdom": "12.1.0",
         "lodash": "^4.17.5",
+        "loop-protect": "^2.1.6",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
         "node-fetch": "^2.2.0",
