--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "@babel/core": "^7.2.2",
+        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
         "@babel/standalone": "^7.3.1",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
