--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     },
     "dependencies": {
         "@babel/core": "^7.2.2",
-        "@babel/plugin-proposal-optional-chaining": "^7.2.0",
         "@babel/standalone": "^7.3.1",
         "better-sqlite3": "^4.1.0",
         "brace": "^0.11.1",
@@ -16,16 +15,15 @@
         "html-entities": "^1.2.1",
         "import-glob-loader": "^1.1.0",
         "irc": "^0.5.2",
+        "isolated-vm": "^1.7.10",
         "jsdom": "12.1.0",
         "lodash": "^4.17.5",
-        "loop-protect": "^2.1.6",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
         "node-fetch": "^2.2.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "semver": "^5.5.1",
-        "vm2": "^3.8.0",
         "ws": "^5.0.0",
         "zipson": "^0.2.7"
     },
