--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "html-entities": "^1.2.1",
         "import-glob-loader": "^1.1.0",
         "irc": "^0.5.2",
-        "isolated-vm": "git://github.com/laverdet/isolated-vm.git#v8-heap",
+        "isolated-vm": "^2.0.0",
         "lodash": "^4.17.5",
         "mobx": "^4.1.0",
         "mobx-react": "^5.0.0",
