--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "dependencies": {
         "better-sqlite3": "^5.4.0",
+        "body-parser": "^1.19.0",
         "brace": "^0.11.1",
         "date-fns": "^1.29.0",
         "express": "^4.16.2",
