--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "irc": "^0.5.2",
         "isolated-vm": "^2.0.1",
         "lodash": "^4.17.13",
+        "marked": "^0.7.0",
         "mobx": "^4.8.0",
         "mobx-react": "^5.0.0",
         "node-fetch": "^2.2.0",
@@ -29,10 +30,10 @@
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
-        "@babel/preset-env": "^7.0.0",
-        "@babel/preset-react": "^7.0.0",
         "@babel/plugin-proposal-class-properties": "^7.0.0",
         "@babel/plugin-proposal-decorators": "^7.2.3",
+        "@babel/preset-env": "^7.0.0",
+        "@babel/preset-react": "^7.0.0",
         "babel-loader": "^8.0.0",
         "node-sass": "^4.12.0",
         "raw-loader": "^0.5.1",
