--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "3.4.3",
+    "version": "3.5.0",
     "scripts": {
         "start-pm2": "pm2 start --name \"nibblrjr\" index.js",
         "start": "node index.js",
@@ -8,7 +8,7 @@
     "dependencies": {
         "better-sqlite3": "^5.4.0",
         "body-parser": "^1.19.0",
-        "brace": "^0.11.1",
+        "codemirror": "^5.49.0",
         "date-fns": "^1.29.0",
         "express": "^4.16.2",
         "global-npm": "^0.3.0",
@@ -25,8 +25,7 @@
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
         "semver": "^5.5.1",
-        "ws": "^5.0.0",
-        "zipson": "^0.2.7"
+        "ws": "^5.0.0"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
