--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dependencies": {
         "better-sqlite3": "^5.4.0",
         "body-parser": "^1.19.0",
+        "codemirror": "^5.49.0",
+        "d3": "^5.12.0",
         "date-fns": "^1.29.0",
         "express": "^4.16.2",
         "global-npm": "^0.3.0",
