--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-    "version": "3.5.0",
+    "version": "3.5.1",
+    "engines" : {
+        "node" : ">=11"
+    },
     "scripts": {
         "start-pm2": "pm2 start --name \"nibblrjr\" index.js",
         "start": "node index.js",
