--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "body-parser": "^1.19.0",
         "codemirror": "^5.49.0",
         "d3": "^5.12.0",
+        "d3-interpolate-path": "^2.1.1",
         "d3-scale-chromatic": "^1.5.0",
         "date-fns": "^1.29.0",
         "express": "^4.16.2",
