--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "version": "3.5.6",
+    "version": "3.5.7",
     "engines": {
         "node": ">=11"
     },
@@ -20,7 +20,7 @@
         "global-npm": "^0.3.0",
         "html-entities": "^1.2.1",
         "irc": "^0.5.2",
-        "isolated-vm": "^3.1.5",
+        "isolated-vm": "3.3.3",
         "lodash": "^4.17.13",
         "marked": "^0.7.0",
         "node-fetch": "^2.2.0",
