--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     },
     "scripts": {
         "start": "node index.js",
+        "build": "npx webpack -p",
         "dev": "node index.js --dev"
     },
     "dependencies": {
         "better-sqlite3": "^6.0.1",
         "body-parser": "^1.19.0",
+        "chokidar": "^3.4.0",
         "codemirror": "^5.52.2",
         "d3": "^5.15.1",
         "d3-interpolate-path": "^2.1.1",
