--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "form-data": "^3.0.0",
         "global-npm": "^0.3.0",
         "html-entities": "^1.2.1",
-        "irc": "^0.5.2",
-        "isolated-vm": "3.3.3",
+        "irc-upd": "^0.11.0",
+        "isolated-vm": "^4.3.5",
         "lodash": "^4.17.13",
         "marked": "^0.7.0",
         "node-fetch": "^2.2.0",
