removed webpack entirely

--- a/package.json
+++ b/package.json
@@ -35,18 +35,6 @@
         "ws": "^5.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-class-properties": "^7.0.0",
-        "@babel/plugin-proposal-decorators": "^7.2.3",
-        "@babel/preset-env": "^7.9.5",
-        "@babel/preset-react": "^7.9.4",
-        "babel-loader": "^8.1.0",
-        "node-sass": "^4.13.1",
-        "raw-loader": "^0.5.1",
-        "sass-loader": "^6.0.7",
-        "style-loader": "^0.20.3",
-        "webpack": "^4.42.1",
-        "webpack-cli": "^3.1.1",
-        "webpack-dev-middleware": "^3.0.1"
+        "esbuild-plugin-sass": "^0.6.0"
     }
 }
