--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router": "^5.0.1",
-        "react-router-dom": "^5.0.1",
-        "ws": "^5.0.0"
+        "react-router-dom": "^5.0.1"
     },
     "devDependencies": {
         "esbuild-plugin-sass": "^0.6.0"
