--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router": "^5.0.1",
-        "react-router-dom": "^5.0.1"
+        "react-router-dom": "^5.0.1",
+        "sqlite-parser": "^1.0.1"
     },
     "devDependencies": {
         "esbuild-plugin-sass": "^0.6.0"
