addded array support to sql interpolation

--- a/config.json.example
+++ b/config.json.example
@@ -12,6 +12,7 @@
             "address": "irc.efnet.org",
             "channels": [{
                 "name": "#purple",
+                "enableMemo": true,
                 "lineLimit": 100
             }],
             "nickname": "purple",
