--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "version": "4.0.0",
     "engines": {
-        "node": ">=14"
+        "node": ">=14",
+        "npm": ">=7"
     },
     "scripts": {
         "start": "node index.js",
