remove global-npm, just use npm 7

--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
         "esbuild": "^0.13.12",
         "express": "^4.16.2",
         "form-data": "^3.0.0",
-        "global-npm": "^0.3.0",
         "irc-upd": "^0.11.0",
         "isolated-vm": "^4.3.5",
         "marked": "^0.7.0",
         "node-fetch": "^2.2.0",
+        "npm": "7.24.2",
         "parse-package-name": "^0.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
